Bug#15192 "fatal errors" are caught by handlers in stored procedures

The problem is that fatal errors (e.g.: out of memory) were being
caught by stored procedure exception handlers which could cause
the execution to not be stopped due to a continue handler.

The solution is to not call any exception handler if the error is
fatal and send the fatal error to the client.